--- a/DataBurialPoint_Swift/DataBurialPoint_Swift/Base.lproj/Main.storyboard
+++ b/DataBurialPoint_Swift/DataBurialPoint_Swift/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QNT-lc-a8b">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,77 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DataBurialPoint_Swift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z4Z-Xc-3vn">
+                                <rect key="frame" x="141.5" y="104" width="91" height="30"/>
+                                <state key="normal" title="To Next Page"/>
+                                <connections>
+                                    <action selector="didToNextPageButtonTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="csG-TW-K6h"/>
+                                    <segue destination="ogO-mY-MkT" kind="push" id="l29-VX-pp3"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqm-nc-hes">
+                                <rect key="frame" x="40" y="174" width="295" height="453"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dqm-nc-hes" secondAttribute="bottom" constant="40" id="ItB-1x-TQB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dqm-nc-hes" secondAttribute="trailing" constant="40" id="LGd-tJ-SHS"/>
+                            <constraint firstItem="dqm-nc-hes" firstAttribute="top" secondItem="Z4Z-Xc-3vn" secondAttribute="bottom" constant="40" id="PFK-EY-vav"/>
+                            <constraint firstItem="Z4Z-Xc-3vn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="XGd-CS-tJN"/>
+                            <constraint firstItem="dqm-nc-hes" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="iCK-Gw-wgc"/>
+                            <constraint firstItem="Z4Z-Xc-3vn" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="pQO-bs-1bp"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="rME-ID-MlY"/>
+                    <connections>
+                        <outlet property="_logView" destination="dqm-nc-hes" id="x1x-78-hqs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-33" y="-37"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="amx-1Y-0gu">
+            <objects>
+                <viewController id="ogO-mY-MkT" customClass="SecondViewController" customModule="DataBurialPoint_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bIq-Ml-b8R">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="MdD-lY-HHN"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="9j2-MU-w9c"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tmJ-Zh-uhI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="759" y="-92"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="tcH-J6-JzC">
+            <objects>
+                <navigationController id="QNT-lc-a8b" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RDo-AZ-Ooc">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="p4d-ws-EGA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H3V-4I-XYJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-855" y="-117"/>
         </scene>
     </scenes>
 </document>
